@@ -100,6 +100,7 @@ objs=   addr.o     \
 	system.o   \
 	template.o \
 	textfile.o \
+	timezone.o \
 	userlist.o \
 	vsev.o     \
 	vsevops.o  \
