@@ -54,6 +54,11 @@ Changes:
 
 Features:
 
+- Msged now creates a TZUTC kludge line by default. Use
+  "switch TZUTC off to" disable this if you do not like it or wrong 
+  information is put to the kludge. Msged does not yet evaluate TZUTC
+  kludge lines when reading mail.
+
 - Character set translation maps for CP865, courtesy of Jesper Soerensen
 
 - New switch "DomainMsgid". Turned on by default, but if turned off it will
